adding table generator and table

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(Lexical_Analyzer_Generator)
+project(Compiler-Project)
 
 set(CMAKE_CXX_STANDARD 11)
 
@@ -51,6 +51,6 @@ set(SOURCE_FILES
         src/Lexical/Symbol_Table/Symbol_table_iterator.cpp
         src/Lexical/Symbol_Table/Symbol_table_iterator.h
         src/Lexical/Scanner/Scanner.cpp
-        src/Lexical/Scanner/Scanner.h)
+        src/Lexical/Scanner/Scanner.h src/Parser/Production/Production.cpp src/Parser/Production/Production.h src/Parser/Parsing_Table/Parsing_Table.cpp src/Parser/Parsing_Table/Parsing_Table.h src/Parser/First/First.cpp src/Parser/First/First.h src/Parser/Follow/Follow.cpp src/Parser/Follow/Follow.h src/Parser/Non_Terminal_Package/Non_Terminal_Info.cpp src/Parser/Non_Terminal_Package/Non_Terminal_Info.h src/Parser/First_Production_Pair/First_Production_Pair.cpp src/Parser/First_Production_Pair/First_Production_Pair.h src/Parser/Parsing_Table_Generator/Parsing_Table_Generator.cpp src/Parser/Parsing_Table_Generator/Parsing_Table_Generator.h)
 
-add_executable(Lexical_Analyzer_Generator ${SOURCE_FILES})
+add_executable(Compiler-Project ${SOURCE_FILES})
