errors in first and follow

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,6 +69,10 @@ set(SOURCE_FILES
         src/Parser/Grammar_parser/Input_parser.cpp
         src/Parser/Grammar_parser/Input_parser.h
         src/Parser/Grammar_parser/Input_reader.cpp
-        src/Parser/Grammar_parser/Input_reader.h src/Parser/Parser_Controller/Parser_Controller.cpp src/Parser/Parser_Controller/Parser_Controller.h)
+        src/Parser/Grammar_parser/Input_reader.h
+        src/Parser/Parser_Controller/Parser_Controller.cpp
+        src/Parser/Parser_Controller/Parser_Controller.h
+        src/Parser/First_follow_finder/first_follow_generator.cpp
+        src/Parser/First_follow_finder/first_follow_generator.h)
 
 add_executable(Compiler-Project ${SOURCE_FILES})
